# AnoPrimer

./: .buildinfo  .pre-commit-config.yaml  AgamPrimer-batch.ipynb  LICENSE  Primer-Design-in-Anopheles-gambiae-dev.ipynb  Primer-Design-in-Anopheles-gambiae-qPCR.ipynb  Primer-Design-in-Anopheles-gambiae.ipynb  README.md  agamPrimer.odp  genindex.html  landing-page.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  workshop-6-module-1-AgamPrimer.ipynb  workshop-6-module-4-AgamPrimer.ipynb
.github/workflows/: github-action-AgamPrimer-funestus.yml  github-action-AgamPrimer-gambiae.yml  github-action-AgamPrimer.yml  testing.yml
AgamPrimer/: AgamPrimer.py  __init__.py
AgamPrimer/agamPrimer.egg-info/: PKG-INFO  top_level.txt
AnoPrimer/: AnoPrimer.py  __init__.py  design.py  evaluate.py  utils.py
AnoPrimer/params/: default.json  relaxed.json  stringent.json
_sources/: landing-page.md
_sources/notebooks/: api.md  data_access.ipynb
agamPrimer/: __init__.py  agamPrimer.py
agamPrimer/AgamPrimer.egg-info/: PKG-INFO  SOURCES.txt
dev/: Primer-Design-in-Anopheles-gambiae-qPCR.ipynb
docs/: agamPrimer.odp
docs/AgamPrimer-docs/: _config.yml  requirements.txt
docs/AgamPrimer-docs/notebooks/: api.md  notebooks.ipynb  troubleshooting_contributing.ipynb
docs/AnoPrimer-docs/: _config.yml  _toc.yml  landing-page.md  requirements.txt
docs/AnoPrimer-docs/notebooks/: api.md  notebooks.ipynb  troubleshooting_contributing.ipynb
graphics/: badge-short.json  badge.json
graphics/teaching/: CNV_methods.odp
notebooks/: AgamPrimer-long.ipynb  AgamPrimer-short.ipynb  AgamPrimer_quick_mode.ipynb  AnoPrimer-long.ipynb  AnoPrimer-short.ipynb  Primer-Design-in-Anopheles-gambiae.ipynb  api.html  data_access.html  notebooks.html  troubleshooting_contributing.html  workshop-6-module-4-AgamPrimer.ipynb
tests/: cDNA_Params.json  cDNA_Params_2.json  cDNA_Params_2_fun.json  cDNA_Params_fun.json  gDNA_probe_Params.json  gDNA_probe_Params_fun.json  probe_Params.json  probe_Params_fun.json  qPCR_Params.json  run_ci_notebooks.sh  test_agamprimer.py  test_anoprimer.py
workflow/notebooks/: expression-candidates.ipynb
workflow/notebooks/misc/: pca-count-data.ipynb
